[tool.poetry]
name = "blue_caves"
version = "0.1.0"
description = ""
authors = ["Volodymyr <kolomiecvm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
cryptography = "^3.4.7"
passlib = "^1.7.4"
PyJWT = "^2.0.1"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
